objects/DevOps_Request__c.object
<CustomObject>
    <fields>
        <fullName>Collaborators__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Collaborators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Destination Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scrum_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrum Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for Developer</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DevOps Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOR-{000000}</displayFormat>
        <label>DevOps Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevOps Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>